--- a/package.json
+++ b/package.json
@@ -7,16 +7,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.11.3",
     "react": "18.2.0",
-    "react-native": "0.74.5",
-    "@expo/vector-icons": "^14.0.3",
-    "react-native-paper": "4.9.2",
-    "axios": "*",
-    "react-native-web": "~0.19.10",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.3"
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-paper": "4.9.2",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^3.35.0",
+    "react-native-web": "~0.19.10",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
